--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,16 @@
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>itx.rpi.hardware</groupId>
+            <artifactId>itx-rpi-drivers</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pi4j</groupId>
+            <artifactId>pi4j-core</artifactId>
+            <version>1.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
