--- a/lightit-webapp/src/main/angular/lightit-webapp/package.json
+++ b/lightit-webapp/src/main/angular/lightit-webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lightit-webapp",
+  "name": "lightita",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,26 +11,35 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.5",
-    "@angular/common": "~8.2.5",
-    "@angular/compiler": "~8.2.5",
-    "@angular/core": "~8.2.5",
-    "@angular/forms": "~8.2.5",
-    "@angular/platform-browser": "~8.2.5",
-    "@angular/platform-browser-dynamic": "~8.2.5",
-    "@angular/router": "~8.2.5",
+    "@angular/animations": "~8.2.11",
+    "@angular/common": "~8.2.11",
+    "@angular/compiler": "~8.2.11",
+    "@angular/core": "~8.2.11",
+    "@angular/forms": "~8.2.11",
+    "@angular/platform-browser": "~8.2.11",
+    "@angular/platform-browser-dynamic": "~8.2.11",
+    "@angular/router": "~8.2.11",
+    "@types/socket.io": "^2.1.4",
+    "chart.js": "^2.8.0",
+    "https-proxy-agent": "^3.0.0",
+    "jquery": "^3.4.1",
+    "net": "^1.0.2",
+    "ngx-color-picker": "^8.2.0",
     "rxjs": "~6.4.0",
+    "sockjs-client": "^1.4.0",
+    "stompjs": "^2.3.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.4",
-    "@angular/cli": "~8.3.4",
-    "@angular/compiler-cli": "~8.2.5",
-    "@angular/language-service": "~8.2.5",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.803.12",
+    "@angular/cli": "^8.3.12",
+    "@angular/compiler-cli": "~8.2.11",
+    "@angular/language-service": "~8.2.11",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@types/stompjs": "^2.3.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
