Synchronise pressure driver

--- a/lightit-backend/src/main/resources/application.properties
+++ b/lightit-backend/src/main/resources/application.properties
@@ -2,4 +2,5 @@ lightit.ledCount=16
 lightit.simulatedMode=true
 
 logging.level.com.github.pyro2266.lightit=DEBUG
+logging.level.com.github.pyro2266.lightit.pressure.driver=INFO
 #logging.level.com.github.pyro2266.lightit.websocket.PressureWebsocketService=TRACE
