--- a/lightit-backend/pom.xml
+++ b/lightit-backend/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.github.pyro2266.lightit</groupId>
     <artifactId>lightit-backend</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <properties>
