--- a/bublight-backend/pom.xml
+++ b/bublight-backend/pom.xml
@@ -72,6 +72,26 @@
                             </filesets>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <artifactId>maven-resources-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>copy-resources</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>copy-resources</goal>
+                                </goals>
+                                <configuration>
+                                    <outputDirectory>src/main/resources/static</outputDirectory>
+                                    <resources>
+                                        <resource>
+                                            <directory>../bublight-webapp/src/main/vue/bublight-webapp/dist</directory>
+                                        </resource>
+                                    </resources>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
