--- a/bublight-webapp/src/main/vue/bublight-webapp/package.json
+++ b/bublight-webapp/src/main/vue/bublight-webapp/package.json
@@ -22,6 +22,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
