--- a/bublight-webapp/src/main/vue/bublight-webapp/package.json
+++ b/bublight-webapp/src/main/vue/bublight-webapp/package.json
@@ -13,11 +13,13 @@
     "core-js": "^3.6.5",
     "sockjs-client": "^1.5.0",
     "stompjs": "^2.3.3",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-vuex": "^4.5.12",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
