Truly (hopefully) ignore public resources in linguist

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-bublight-webapp/src/main/vue/bublight-webapp/public/* linguist-vendored
+bublight-webapp/src/main/vue/bublight-webapp/public/** linguist-vendored
