Set log level of logging pressure back to debug and update config

--- a/bublight-backend/src/main/resources/application.properties
+++ b/bublight-backend/src/main/resources/application.properties
@@ -2,5 +2,5 @@ bublight.ledCount=16
 bublight.simulatedMode=true
 
 logging.level.com.github.pyro2266.bublight=DEBUG
-logging.level.com.github.pyro2266.bublight.pressure.driver=INFO
+logging.level.com.github.pyro2266.bublight.service.pressure.driver=INFO
 #logging.level.com.github.pyro2266.bublight.websocket.PressureWebsocketService=TRACE
