--- a/bublight-webapp/src/main/vue/bublight-webapp/package.json
+++ b/bublight-webapp/src/main/vue/bublight-webapp/package.json
@@ -8,25 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "chart.js": "^2.9.4",
-    "core-js": "^3.6.5",
-    "sockjs-client": "^1.5.0",
+    "core-js": "^3.24.0",
+    "lodash": "^4.17.21",
+    "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
-    "vue": "^2.6.11",
+    "vue": "^2.7.8",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-vuex": "^4.5.12",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "^4.5.19",
+    "@vue/cli-plugin-eslint": "^4.5.19",
+    "@vue/cli-plugin-vuex": "^4.5.19",
+    "@vue/cli-service": "^4.5.19",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.1.1",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.54.0",
+    "sass-loader": "^10.3.1",
+    "vue-template-compiler": "^2.7.8"
   },
   "eslintConfig": {
     "root": true,
