--- a/bublight-backend/src/main/resources/application.properties
+++ b/bublight-backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 bublight.ledCount=16
-bublight.simulatedMode=true
+bublight.simulatedLed=true
+bublight.simulatedPressure=true
 
 logging.level.com.github.pyro2266.bublight=DEBUG
 logging.level.com.github.pyro2266.bublight.service.pressure.driver=INFO
