Added support for temperature
Including controller and service and simulated controller

--- a/bublight-backend/src/main/resources/application.properties
+++ b/bublight-backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 bublight.ledCount=16
 bublight.simulatedLed=true
 bublight.simulatedPressure=true
+bublight.simulatedSensor=true
 
 logging.level.com.github.pyro2266.bublight=DEBUG
-logging.level.com.github.pyro2266.bublight.service.pressure.driver=INFO
+logging.level.com.github.pyro2266.bublight.service.sensor.driver=INFO
 #logging.level.com.github.pyro2266.bublight.websocket.PressureWebsocketService=TRACE
